--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
 }
 
 .menu-wrap .menu > div {
-    background-color: rgba(26, 39, 208, 0.7);
+    background-color: #3e5fb1;
     border-radius: 50%;
     width: 200vw;
     height: 200vw;
