--- a/style.css
+++ b/style.css
@@ -159,6 +159,61 @@ body {
     object-fit: cover;
 }
 
+/* Quick Summary Modal Styles */
+
+.modal {
+    display: grid;
+    place-self: center;
+    width: 75%;
+    padding: 1rem;
+    border-radius: 4px;
+}
+
+.modal-content {
+    display: grid;
+    place-items: center;
+}
+
+.quick-sum {
+    color:var(--itv-red);
+    font-size: clamp(24px, 2vw, 36px);
+    text-transform: uppercase;
+    font-style: italic;
+}
+
+.page-title {
+    font-size: clamp(14px, 2vw, 20px);
+    margin-bottom: 8px;
+}
+
+.modal-content > p {
+    padding: 0 1rem 0 1rem;
+    font-size: 16px;
+    line-height: clamp(25px, 2vw, 30px);
+}
+
+.close {
+    position: absolute;
+    top: 6px;
+    right: 5px;
+    width: 24px;
+    height: 24px;
+}
+
+.quick-summary-reopen {
+    display: grid;
+    justify-self: center;
+    margin-top: 16px;
+    padding: 12px;
+    border-radius: 22px;
+    color:var(--itv-red);
+    font-size: clamp(24px, 2vw, 36px);
+    text-transform: uppercase;
+    font-style: italic;
+    cursor: pointer;
+    display: none;
+}
+
 /* Homepage styles */
 
 .cta-landing {
@@ -1287,6 +1342,10 @@ a.long-name {
     .menu-wrap .menu > div > div > ul > li {
         font-size: 1rem;
         padding: .75rem;
+    }
+
+    .quick-sum {
+        margin-bottom: 7px;
     }
 
   }
