--- a/style.css
+++ b/style.css
@@ -1393,4 +1393,24 @@ a.long-name {
         margin-top: 10px;
     }
 
+    .video-container {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+        height: 0;
+        overflow: hidden;
+    }
+    .video-container video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+        .video-container {
+            padding-bottom: 75%; /* Adjusting for more vertical aspect ratios on smaller screens */
+        }
+    }
   }
