--- a/style.css
+++ b/style.css
@@ -296,28 +296,6 @@ body {
     height: clamp(140.6px, 20vw, 315px)
 }
 
-/*Video Embeds for small videos on homepage*/
-
-.hp-video-box {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: clamp(300px, 85vw, 1200px);
-    padding: 40px;
-}
-
-.video-box-sm {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 5px;
-}
-
-.video-heading-sm {
-    text-align: center;
-    margin: 5px 0 5px 0;
-}
-
 /* Homepage styles */
 
 .cta-landing {
@@ -449,7 +427,156 @@ body {
     width: clamp(300px, 58.5vw, 900px)
 }
 
+/* Homepage Re-Write */
 
+.cta-banner {
+    background: var(--itv-red);
+    color: var(--bg-color);
+}
+
+.cta-banner-heading {
+    font-size: 22px;
+    font-family: 'Calistoga', cursive;
+    padding: 12px;
+}
+
+.cta-content {
+    font-size: clamp(18px, 3vw, 20px);
+    font-family: 'Calistoga', cursive;
+    padding: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cta-link {
+    padding: 0 8px 8px 0;
+}
+
+.jumbotron {
+    background-image: url('assets/blue_court.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.overlay-nav {
+    padding: 16px;
+    font-family: "Anton SC", sans-serif;
+    color: var(--bg-color);
+    -webkit-text-stroke: 2px #030104;
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+
+.home {
+    font-size: 36px;
+}
+
+.other-links {
+    display: flex;
+    align-items: center;
+}
+
+.overlay-nav-link {
+    text-decoration: none;
+    color: var(--bg-color);
+    -webkit-text-stroke: 2px #030104;
+    font-size: 28px;
+    padding: 0 12px 12px 0;
+    margin-top: 10px;
+}
+
+.jumbotron-message {
+    font-family: "Anton SC", sans-serif;
+    font-size: 76px;
+    color: var(--bg-color);
+    -webkit-text-stroke: 2px #030104;
+    padding: 12px;
+}
+
+.vertical-align {
+    position: relative;
+    top: 30%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.hp-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.videos-heading {
+    font-family: 'Calistoga', cursive;
+    font-size: 36px;
+    margin-top: 40px;
+}
+
+.mission-section {
+    padding: 20px;
+    display: flex;
+}
+
+.mission-text {
+    width: 45vw;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.big-mission-text {
+    font-size: 56px;
+    font-family: "Anton SC", sans-serif;
+}
+
+.small-mission-text {
+    line-height: 24px;
+}
+
+.small-mission-text > p {
+    margin-bottom: 6px;
+}
+
+.mission-image-box {
+    width: 45vw;
+}
+
+.mission-img {
+    height: 400px;
+    width: 45vw;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+/*Video Embeds for small videos on homepage*/
+
+.hp-video-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: clamp(300px, 85vw, 1200px);
+    padding: 40px;
+    width: 100%;
+}
+
+.video-box-sm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
+.video-heading-sm {
+    text-align: center;
+    margin: 5px 0 5px 0;
+}
 
 /* Cumberland County Elections */
 
