--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 	--bg-color: #f8f8ff;
     --itv-blue: #3d61af;
     --itv-red: #bf1b2d;
+    --itv-purple: #9966cc;
 }
 
 body {
@@ -638,6 +639,20 @@ body {
     margin: 5px 0 5px 0;
 }
 
+/* Modal Video */
+
+.modal-video-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 95%;
+}
+
+.video-container {
+    container: modalvid / inline-size;
+    width: 95%;
+}
+
 /* Cumberland County Elections */
 
 
@@ -692,7 +707,9 @@ body {
     margin-bottom: 4px;
 }
 
-#democratic-candidates, #republican-candidates {
+#democratic-candidates, 
+#republican-candidates,
+#independent-candidates {
     width: clamp(300px, 78vw, 1200px);
     display: grid;
     justify-self: center;
@@ -868,6 +885,11 @@ div#democratic-candidates > .row > .a > .a-row-2 > .last-name > a {
 div#republican-candidates  > .row > .a > .a-row-1 > .first-name > a,
 div#republican-candidates  > .row > .a > .a-row-2 > .last-name > a {
     color: var(--itv-red);
+}
+
+div#independent-candidates  > .row > .a > .a-row-1 > .first-name > a,
+div#independent-candidates  > .row > .a > .a-row-2 > .last-name > a {
+    color: var(--itv-purple);
 }
 
 a.long-name {
