--- a/style.css
+++ b/style.css
@@ -43,6 +43,14 @@ footer {
     margin-bottom: 4px;
 }
 
+a {
+    color: black;
+}
+
+li {
+    list-style-type: none;
+}
+
 /* Large screen nav */
 
 .nav-2-electric-buggalo {
@@ -1178,6 +1186,15 @@ a.long-name {
     line-height: clamp(21px, 4vw, 26px);
 }
 
+.can-sec {
+    border-radius: 45px;
+    background: ghostwhite;
+    box-shadow: inset 29px 29px 42px #d1dbdd,
+                inset -29px -29px 42px #f1fbff;
+    padding: 16px;
+    margin-bottom: 12px;
+}
+
 .agenda-thesis > p,
 .policy-positions > p,
 .experience > p {
@@ -1187,7 +1204,7 @@ a.long-name {
 .agenda-thesis > ul {
     text-align: start;
     padding: 20px;
-    max-width: 330px;
+    max-width: 75vw;
 }
 
 .agenda-thesis > ul > li > ol {
@@ -1207,6 +1224,7 @@ a.long-name {
 
 .sub-heading {
     color: var(--itv-red);
+    font-family: "Anton", sans-serif;
     text-transform: capitalize;
     font-size: clamp(23px, 4vw, 32px);
     line-height: clamp(36px, 4vw, 52px);
@@ -1217,12 +1235,25 @@ a.long-name {
 
 .website {
     display: flex;
-    flex-direction: column;
-    max-width: 330px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .website > a {
     margin-bottom: 6px;
+}
+
+.candidate-ext-site {
+    padding: 12px;
+    margin: 12px;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: color 1s, background 1s;
+}
+
+.candidate-ext-site:hover {
+    background: var(--itv-red);
+    color:white;
 }
 
 /* Get Involved Styles */
@@ -1671,6 +1702,10 @@ a.long-name {
     .website {
         text-align: start;
         justify-items: start;
+    }
+
+    .website {
+        flex-direction: column;
     }
 
     .candidate-agenda {
