--- a/style.css
+++ b/style.css
@@ -398,8 +398,6 @@ label::before {
 }
 
 .quick-summary-reopen {
-    display: grid;
-    justify-self: center;
     margin-top: 16px;
     padding: 12px;
     border-radius: 22px;
@@ -1144,10 +1142,37 @@ a.long-name {
 }
 
 .candidate-pic-box-content {
-    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Lora' serif;
     font-size: clamp(16px, 4vw, 20px);
     line-height: clamp(23px, 4vw, 26px);
-    font-family: 'Lora' serif;
+    margin-left: 16px;
+}
+
+.job-description {
+    display: grid;
+    justify-self: center;
+    max-width: 85vw;
+}
+
+.election-date {
+    background: var(--itv-red);
+    border-radius: 7px;
+    color: white;
+    margin-top: 30px;
+    padding: 30px;
+}
+
+.animal-box {
+    display: flex;
+    margin-top: 30px;
+}
+
+.donkey {
+    height: clamp(35px, 4vw, 44px);
+    width: clamp(40px, 4vw, 50px);
 }
 
 .cover {
@@ -1229,7 +1254,8 @@ a.long-name {
     text-align: start;
 }
 
-.sub-heading {
+.sub-heading,
+.sub-heading-ballot {
     color: var(--itv-red);
     font-family: "Anton", sans-serif;
     text-transform: capitalize;
@@ -1238,6 +1264,13 @@ a.long-name {
     font-weight: 800;
     padding: 8px 0 8px 0;
     width: 100%;
+}
+
+.sub-heading-ballot {
+    display: grid;
+    justify-self: center;
+    margin-top: 16px;
+    max-width: 85vw;
 }
 
 .website {
