--- a/style.css
+++ b/style.css
@@ -1009,6 +1009,11 @@ div#independent-candidates  > .row > .a > .a-row-2 > .last-name > a {
     color: var(--itv-purple);
 }
 
+div#green-candidates  > .row > .a > .a-row-1 > .first-name > a,
+div#green-candidates  > .row > .a > .a-row-2 > .last-name > a {
+    color: var(--itv-green);
+}
+
 a.long-name {
     margin-left: 4px;
     font-size: clamp(22px, 3vw, 28px);
