changed pink and yellow colors to read better against white background

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
     --itv-red: #bf1b2d;
     --itv-purple: #9966cc;
     --itv-green: #00FF00;
-    --itv-yellow: #FFFF00;
-    --itv-pinkish: #C41E3A;
+    --itv-yellow: #FFD700;
+    --itv-pinkish: #FF69B4;
     --itv-black: #000000;
 }
 
