khalil page update

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --itv-red: #bf1b2d;
     --itv-purple: #9966cc;
     --itv-green: #00FF00;
-    --itv-yellow: #fff200;
+    --itv-yellow: #B8860B;
     --itv-pinkish: #FF69B4;
     --itv-black: #000000;
 }
