--- a/style.css
+++ b/style.css
@@ -377,10 +377,16 @@ label::before {
 }
 
 .quick-sum {
+    margin-top: 16px;
+    padding: 12px;
+    border-radius: 22px;
     color:var(--itv-red);
     font-size: clamp(24px, 2vw, 36px);
     text-transform: uppercase;
     font-style: italic;
+    cursor: pointer;
+    max-width: 280.74px;
+    justify-self: center;
 }
 
 .page-title {
@@ -1287,6 +1293,40 @@ a.long-name {
 
 .grey-pic-border {
     border: 3px grey solid;
+}
+
+.gauge-box {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* for clamp, the first number is the mobile size, the last number is the desktop size, the middle number
+is a variable (viewport width) to maintain the responsive size. It is the desktop size divided by the desktop
+viewport size. If you change the desktop size, you have to re-calculate the variable size. */
+
+.gauge {
+    height: clamp(80px, 16vw, 250px);
+    width: clamp(80px, 16vw, 250px);
+}
+
+.extra-long {
+    font-size: clamp(18px, 4vw, 24px) !important;
+    text-align: center !important;
+}
+
+.rating-exp {
+    margin-top: 16px;
+    padding: 12px;
+    border-radius: 22px;
+    color:var(--itv-red);
+    font-size: clamp(18px, 2vw, 24px);
+    text-transform: uppercase;
+    font-style: italic;
+    cursor: pointer;
+    max-width: 280.74px;
+    justify-self: center;
 }
 
 .candidate-agenda {
